tests/approval/snapshots/approval_postgres__list_tools_read_only.snap
---
source: tests/approval/postgres.rs
assertion_line: 52
expression: tools
---
[
  {
    "name": "explain_query",
    "title": "Explain Query",
    "description": "Return the execution plan for a SQL query to diagnose performance. Use this tool instead of running EXPLAIN directly through read_query — it provides structured JSON output. Accepts an optional `database_name` to explain queries against a different database.\n\n<usecase>\nUse when:\n- A query runs slowly and you need to understand why\n- Investigating performance bottlenecks\n- Planning index creation to optimize queries\n- Analyzing join methods, table scan strategies, and sort operations\n</usecase>\n\n<when_not_to_use>\n- Running actual queries → use read_query or write_query\n- Checking table structure → use get_table_schema\n</when_not_to_use>\n\n<examples>\n✓ \"Why is my SELECT on orders slow?\" → explain_query(query=\"SELECT ...\")\n✓ \"Should I add an index?\" → explain_query with analyze=true\n✗ \"Run this SELECT\" → use read_query\n</examples>\n\n<safety>\nSet `analyze` to true for actual execution statistics (EXPLAIN ANALYZE).\nIMPORTANT: EXPLAIN ANALYZE actually executes the query! In read-only mode, only read-only statements are allowed with analyze.\nWhen analyze is false, returns EXPLAIN (FORMAT JSON) output without executing.\n</safety>\n\n<what_it_returns>\nA JSON array of execution plan rows showing access methods, join types, row estimates, and costs.\n</what_it_returns>",
    "inputSchema": {
      "$schema": "https://json-schema.org/draft/2020-12/schema",
      "description": "Request for the `explain_query` tool.",
      "properties": {
        "analyze": {
          "default": false,
          "description": "If true, use EXPLAIN ANALYZE for actual execution statistics. In read-only mode, only allowed for read-only statements. Defaults to false.",
          "type": "boolean"
        },
        "database_name": {
          "description": "The database to explain against. Required. Use `list_databases` first to see available databases.",
          "type": "string"
        },
        "query": {
          "description": "The SQL query to explain.",
          "type": "string"
        }
      },
      "required": [
        "database_name",
        "query"
      ],
      "title": "ExplainQueryRequest",
      "type": "object"
    },
    "outputSchema": {
      "$schema": "https://json-schema.org/draft/2020-12/schema",
      "description": "Response for the `read_query`, `write_query`, and `explain_query` tools.",
      "properties": {
        "rows": {
          "description": "Result rows, each a JSON object keyed by a column name."
        }
      },
      "required": [
        "rows"
      ],
      "title": "QueryResponse",
      "type": "object"
    },
    "annotations": {
      "readOnlyHint": true,
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": true
    }
  },
  {
    "name": "get_table_schema",
    "title": "Get Table Schema",
    "description": "Get column definitions and foreign key relationships for a table. Requires `database_name` and `table_name` — call `list_databases` and `list_tables` first.\n\n<usecase>\nALWAYS call this before writing queries to understand:\n- Column names and data types\n- Which columns are nullable, primary keys, or have defaults\n- Foreign key relationships for writing JOINs\n</usecase>\n\n<examples>\n✓ \"What columns does the orders table have?\" → get_table_schema(database_name=\"mydb\", table_name=\"orders\")\n✓ Before writing a SELECT → get_table_schema first to confirm column names\n✓ \"How are users and orders related?\" → check foreign keys in both tables\n</examples>\n\n<what_it_returns>\nA JSON object with table_name and columns keyed by column name, each containing type, nullable, key, default, and foreign_key info.\n</what_it_returns>",
    "inputSchema": {
      "$schema": "https://json-schema.org/draft/2020-12/schema",
      "description": "Request for the `get_table_schema` tool.",
      "properties": {
        "database_name": {
          "description": "The database name containing the table. Required. Use `list_databases` first to see available databases.",
          "type": "string"
        },
        "table_name": {
          "description": "The table name to inspect. Use `list_tables` first to see available tables in the database.",
          "type": "string"
        }
      },
      "required": [
        "database_name",
        "table_name"
      ],
      "title": "GetTableSchemaRequest",
      "type": "object"
    },
    "outputSchema": {
      "$schema": "https://json-schema.org/draft/2020-12/schema",
      "description": "Response for the `get_table_schema` tool.",
      "properties": {
        "columns": {
          "description": "Column definitions keyed by column name."
        },
        "table_name": {
          "description": "Name of the inspected table.",
          "type": "string"
        }
      },
      "required": [
        "table_name",
        "columns"
      ],
      "title": "TableSchemaResponse",
      "type": "object"
    },
    "annotations": {
      "readOnlyHint": true,
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": false
    }
  },
  {
    "name": "list_databases",
    "title": "List Databases",
    "description": "List all accessible databases on the connected server. Use this tool to discover what databases are available before using other tools.\n\n<usecase>\nALWAYS call this tool FIRST when:\n- You need to explore what databases exist on the server\n- You need a database name for list_tables, get_table_schema, or query tools\n- The user asks what data is available\n</usecase>\n\n<examples>\n✓ \"What databases are on this server?\"\n✓ \"Show me what's available\" → call list_databases first\n</examples>\n\n<what_it_returns>\nA sorted JSON array of database name strings.\n</what_it_returns>",
    "inputSchema": {
      "properties": {},
      "type": "object"
    },
    "outputSchema": {
      "$schema": "https://json-schema.org/draft/2020-12/schema",
      "description": "Response for the `list_databases` tool.",
      "properties": {
        "databases": {
          "description": "Sorted list of database names.",
          "items": {
            "type": "string"
          },
          "type": "array"
        }
      },
      "required": [
        "databases"
      ],
      "title": "ListDatabasesResponse",
      "type": "object"
    },
    "annotations": {
      "readOnlyHint": true,
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": false
    }
  },
  {
    "name": "list_tables",
    "title": "List Tables",
    "description": "List all tables in a specific database. Requires `database_name` — call `list_databases` first to discover available databases.\n\n<usecase>\nUse when:\n- Exploring a database to find relevant tables\n- Verifying a table exists before querying or inspecting it\n- The user asks what tables are in a database\n</usecase>\n\n<examples>\n✓ \"What tables are in the mydb database?\" → list_tables(database_name=\"mydb\")\n✓ \"Does a users table exist?\" → list_tables to check\n✗ \"Show me the columns of users\" → use get_table_schema instead\n</examples>\n\n<what_it_returns>\nA sorted JSON array of table name strings.\n</what_it_returns>\n\n<pagination>\nThis tool paginates its response. If more tables exist than fit in one page, the response includes a `nextCursor` string — call `list_tables` again with that string as the `cursor` argument to fetch the next page. Iterate until `nextCursor` is absent.\n\nCursors are opaque: do not parse, modify, or persist them across sessions. Passing a malformed or stale cursor returns a JSON-RPC error (code -32602); recover by retrying without a cursor to restart from the first page.\n\nNote: tables created or dropped between paginated calls may cause the same table to appear twice or to be skipped. Re-enumerate from a fresh call for a consistent snapshot.\n</pagination>",
    "inputSchema": {
      "$schema": "https://json-schema.org/draft/2020-12/schema",
      "description": "Request for the `list_tables` tool.",
      "properties": {
        "cursor": {
          "default": null,
          "description": "Opaque pagination cursor. Omit (or pass `null`) for the first page.\nOn subsequent calls, pass the `nextCursor` returned by the previous\nresponse verbatim. Cursors are opaque — do not parse, modify, or persist.",
          "type": [
            "string",
            "null"
          ]
        },
        "database_name": {
          "description": "The database name to list tables from. Required. Use `list_databases` first to see available databases.",
          "type": "string"
        }
      },
      "required": [
        "database_name"
      ],
      "title": "ListTablesRequest",
      "type": "object"
    },
    "outputSchema": {
      "$schema": "https://json-schema.org/draft/2020-12/schema",
      "description": "Response for the `list_tables` tool.",
      "properties": {
        "nextCursor": {
          "description": "Opaque cursor pointing to the next page. Absent when this is the final page.",
          "type": [
            "string",
            "null"
          ]
        },
        "tables": {
          "description": "Sorted list of table names for this page.",
          "items": {
            "type": "string"
          },
          "type": "array"
        }
      },
      "required": [
        "tables"
      ],
      "title": "ListTablesResponse",
      "type": "object"
    },
    "annotations": {
      "readOnlyHint": true,
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": false
    }
  },
  {
    "name": "read_query",
    "title": "Read Query",
    "description": "Execute a read-only SQL query. Allowed statements: SELECT, SHOW, EXPLAIN. Accepts an optional `database_name` to query across databases without reconnecting.\n\n<usecase>\nUse when:\n- Querying data from tables (SELECT with WHERE, JOIN, GROUP BY, etc.)\n- Aggregations: COUNT, SUM, AVG, GROUP BY, HAVING\n- Listing server configuration parameters (SHOW)\n</usecase>\n\n<when_not_to_use>\n- Data changes (INSERT, UPDATE, DELETE) → use write_query\n- Query performance analysis → use explain_query\n- Discovering tables or columns → use list_tables or get_table_schema\n</when_not_to_use>\n\n<examples>\n✓ \"SELECT * FROM users WHERE status = 'active'\"\n✓ \"SELECT COUNT(*) FROM orders GROUP BY region\"\n✓ \"SHOW server_version\"\n✗ \"INSERT INTO users ...\" → use write_query\n✗ \"EXPLAIN SELECT ...\" → use explain_query for structured analysis\n</examples>\n\n<what_it_returns>\nA JSON array of row objects, each keyed by column name.\n</what_it_returns>",
    "inputSchema": {
      "$schema": "https://json-schema.org/draft/2020-12/schema",
      "description": "Request for the `read_query` and `write_query` tools.",
      "properties": {
        "database_name": {
          "description": "The database to run the query against. Required. Use `list_databases` first to see available databases.",
          "type": "string"
        },
        "query": {
          "description": "The SQL query to execute.",
          "type": "string"
        }
      },
      "required": [
        "query",
        "database_name"
      ],
      "title": "QueryRequest",
      "type": "object"
    },
    "outputSchema": {
      "$schema": "https://json-schema.org/draft/2020-12/schema",
      "description": "Response for the `read_query`, `write_query`, and `explain_query` tools.",
      "properties": {
        "rows": {
          "description": "Result rows, each a JSON object keyed by a column name."
        }
      },
      "required": [
        "rows"
      ],
      "title": "QueryResponse",
      "type": "object"
    },
    "annotations": {
      "readOnlyHint": true,
      "destructiveHint": false,
      "idempotentHint": true,
      "openWorldHint": true
    }
  }
]
