tests/approval/snapshots/approval_postgres__server_info_read_only.snap
---
source: tests/approval/postgres.rs
expression: info
---
{
  "protocolVersion": "2025-11-25",
  "capabilities": {
    "tools": {}
  },
  "serverInfo": {
    "name": "dbmcp",
    "title": "Database MCP Server",
    "version": "[version]",
    "description": "Database MCP Server for PostgreSQL",
    "websiteUrl": "https://dbmcp.haymon.ai"
  },
  "instructions": "## Workflow\n\n1. Call `listDatabases` to discover available databases.\n2. Call `listTables` to see tables. Pass `search` to filter by name (case-insensitive substring). Pass `detailed: true` to get columns, constraints, indexes, and triggers in the same call — this supersedes the legacy `getTableSchema` workflow.\n3. Call `listViews` to see views in the `public` schema.\n4. Call `listTriggers` to see user-defined triggers in the `public` schema.\n5. Call `listFunctions` to see user-defined functions in the `public` schema.\n6. Call `listProcedures` to see user-defined procedures in the `public` schema.\n7. Call `listMaterializedViews` to see materialized views in the `public` schema.\n8. Use `readQuery` for read-only SQL (SELECT, SHOW, EXPLAIN).\n9. Use `explainQuery` to analyze query execution plans and diagnose slow queries.\n\nPer-database tools default to the active database; pass `database` to target another.\n\n## Constraints\n\n- The server runs in read-only mode. Data and schema changes are not possible.\n- Multi-statement queries are not supported. Send one statement per request.\n"
}
